# personalized-reco

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
apps/pipelines/: pyproject.toml
apps/pipelines/src/pipelines/: __init__.py  cli.py  consumer.py  recommender.py
apps/pipelines/tests/: test_behavioral.py  test_cli.py  test_popularity_deterministic.py  test_recommend_contract.py
apps/pipelines/tests/integration/: test_consumer_integration.py
apps/serving/: build.gradle.kts
apps/serving/src/main/kotlin/me/imweb/reco/serving/: ServingApplication.kt
apps/serving/src/main/kotlin/me/imweb/reco/serving/api/: ExampleRecommendationController.kt  HealthController.kt
apps/serving/src/main/kotlin/me/imweb/reco/serving/event/: EventEnvelope.kt  EventIngestController.kt
apps/serving/src/main/resources/: application.yml
apps/serving/src/test/kotlin/me/imweb/reco/serving/: HealthControllerTest.kt
apps/serving/src/test/kotlin/me/imweb/reco/serving/event/: EventIngestControllerTest.kt  EventIngestE2ETest.kt
contracts/proto/: README.md
docs/: README.md  testing.md
infra/: README.md  docker-compose.yml
infra/postgres/init/: 01_bronze.sql
